<resources>

    <string name="app_name">MemoryGame</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_memory_game">Memory Game</string>
    <string name="pick_a_card">Pick a card, any card</string>
    <string name="score_text">Score:</string>
    <string name="time">&quot;Time left:&quot;</string>
    <string name="score">0</string>
    <string name="timer">30</string>
    <string name="pick_another_card">Now pick another card</string>
    <string name="wrong">Wrong! Pick Again&#8230;</string>
    <string name="right">Right!</string>
    <string name="play_again">Play Again!</string>
    <string name="start">Start</string>
    <string name="start_msg">To start the game, press the start button</string>

</resources>